--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
         <li>
           <a href="notifications.html" target="main-content">
             <div class="indicator">
-              <div class="indicator-item badge badge-secondary">4</div>
+              <div v-if="notiff > 0" class="indicator-item badge badge-secondary">{{ notiff }}</div>
               <i class="material-icons">notifications</i>
             </div>
             Notifications</a>
