--- a/src/notifications.html
+++ b/src/notifications.html
@@ -19,17 +19,17 @@
     <div class="divider m-0 p-0"></div>
     
     <div id="notifa" class="overflow-auto h-dvh">
-        <div v-for="item in not" :key="item.id">
+        <div v-for="item in not" :key="item.id" class="px-3 m-3">
             <a :href="'profile.html?uid=' + item.user_id">
                 <div class="avatar flex items-center pt-3">
                   <div class="w-10 h-10 rounded-full">
                     <img :src="'..' + item.profile_pic" />
                   </div>
                   <label class="text-lg pl-2"> {{ item.fullname }} like your post.
+                    <p class="text-gray-600">
+                      {{ item.date_like }}
+                    </p>
                   </label>
-                  <p class="text-gray-600">
-                    {{ item.date_like }}
-                  </p>
                 </div>
               </a>
         </div>
