Mark notif as read

--- a/src/notifications.html
+++ b/src/notifications.html
@@ -21,15 +21,18 @@
     <div id="notifa" class="overflow-auto h-dvh">
         <div v-for="item in not" :key="item.id" class="px-3 m-3">
             <a :href="'profile.html?uid=' + item.user_id">
-                <div class="avatar flex items-center pt-3">
+                <div class="avatar flex items-center pt-3 relative">
                   <div class="w-10 h-10 rounded-full">
                     <img :src="'..' + item.profile_pic" />
                   </div>
-                  <label class="text-lg pl-2"> {{ item.fullname }} like your post.
+                  <label class="text-lg pl-2"> <b>{{ item.fullname }}</b> like your post.
                     <p class="text-gray-600">
                       {{ item.date_like }}
                     </p>
                   </label>
+                  <!-- <div class="absolute left-0 bottom-0 mb-1 w-7 h-7 bg-blue-600 rounded-full flex items-center justify-center">
+                    <i class="material-icons text-base-content">chat</i>
+                  </div> -->
                 </div>
               </a>
         </div>
