--- a/src/profile.html
+++ b/src/profile.html
@@ -41,8 +41,8 @@
         <i class="material-icons">calendar_month</i>
         Joined {{ items.date_created }}</div>
       <div>
-        <a href="" class="p-3"><b>30</b> Following</a>
-        <a href="" class="p-3"><b>192.5K</b> Followers</a>
+        <a href="" class="p-3"><b>{{ items.following_count }}</b> Following</a>
+        <a href="" class="p-3"><b>{{ items.follower_count }}</b> Followers</a>
       </div>
     </div>
     <div class="divider m-0 p-0"></div>
