--- a/src/messages.html
+++ b/src/messages.html
@@ -10,13 +10,29 @@
     <script src="lib/session.js" async></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="lib/chat.js"></script>
 </head>
 <body>
-    <ul>
-        <li>test</li>
-        <li>test</li>
-        <li>test</li>
-        <li>test</li>
-    </ul>
+    <div id="message">
+        
+        <div v-if="statee">
+            <ul>
+                <li>
+                    <button @click="chatBtn()" class="hover:text-secondary">test</button>
+                </li>
+                <li>
+                    <button>test</button>
+                </li>
+                <li>
+                    <button>test</button>
+                </li>
+            </ul>
+        </div>
+
+        <div v-else>
+            Test
+        </div>
+
+    </div>
 </body>
 </html>
