--- a/notifications.html
+++ b/notifications.html
@@ -23,7 +23,7 @@
             <a :href="'profile.html?uid=' + item.user_id">
                 <div class="avatar flex items-center pt-3 relative">
                   <div class="w-10 h-10 rounded-full">
-                    <img :src="'..' + item.profile_pic" />
+                    <img :src="'.' + item.profile_pic" />
                   </div>
                   <label class="text-lg pl-2"> <b>{{ item.fullname }}</b> like your post.
                     <p class="text-gray-600">
