--- a/comment.html
+++ b/comment.html
@@ -34,7 +34,7 @@
                 <a :href="'profile.html?uid=' + item.user_id">
                     <div class="avatar container p-3">
                         <div class="w-10 rounded-full">
-                            <img :src="'..' + item.profile_pic" />
+                            <img :src="'.' + item.profile_pic" />
                         </div>
                         <label class="pl-3">{{ item.fullname }}
                             <span class="text-gray-600">
