--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
     <div class="flex justify-between items-center pt-6 px-6">
       <div class="avatar flex items-center">
         <div class="w-24 rounded-full">
-          <img :src="'..' + items.profile_pic" />
+          <img :src="'.' + items.profile_pic" />
         </div>
         <span class="m-3">
           <h1 class="font-bold text-xl">{{ items.fullname }}</h1>
@@ -95,7 +95,7 @@
             <a :href="'profile.html?uid=' + item.user_id">
               <div class="avatar container">
                 <div class="w-12 h-12 rounded-full">
-                  <img :src="'..' + item.profile_pic" />
+                  <img :src="'.' + item.profile_pic" />
                 </div>
                   <label class="text-lg pl-2">{{ item.fullname }}
                     <p class="text-gray-600 break-normal">@{{ item.username }}</p>
@@ -146,7 +146,7 @@
             <div class="carousel w-full rounded-box">
               <template v-for="(filename, index) in item.filenames" :key="index">
                 <div :id="'slide'+ item.post_id + (index + 1)" class="carousel-item relative w-full">
-                  <img v-if="filename" :src="'..' + filename" class="w-full">
+                  <img v-if="filename" :src="'.' + filename" class="w-full">
                   <div v-if="item.filenames.length > 1"
                     class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                     <a :href="'#slide'+ item.post_id + ((index - 1 + item.filenames.length) % item.filenames.length + 1)"
