--- a/search.html
+++ b/search.html
@@ -55,7 +55,7 @@
                 <a :href="'profile.html?uid=' + item.user_id">
                     <div class="avatar flex items-center pt-3">
                       <div class="w-10 h-10 rounded-full">
-                        <img :src="'..' + item.profile_pic" />
+                        <img :src="'.' + item.profile_pic" />
                       </div>
                       <label class="text-lg pl-2"> {{ item.fullname }}
                         <p class="text-gray-600">
