--- a/search.html
+++ b/search.html
@@ -17,7 +17,8 @@
 
         <div class="navbar flex">
             <label class="input input-bordered flex items-center gap-2 w-full">
-                <input type="text" v-model="searchText" @input="updateURL()" class="flex-grow w-full" placeholder="Search" />
+                <input type="text" v-model="searchText" @input="updateURL()" class="flex-grow w-full"
+                    placeholder="Search" />
                 <button @click="performSearch" class="flex-shrink-0">
                     <i class="material-icons w-4 h-4 opacity-70">search</i>
                 </button>
@@ -37,33 +38,18 @@
             Search for "{{ searchText }}"
             <div class="divider m-0 p-0"></div>
             <div v-for="item in resultsFiltered" :key="item.id" class="px-3 m-3">
-                <!-- <a :href="'profile.html?uid='+item.user_id">{{ item.fullname }}
-                    <div class="avatar">
+                <a :href="'profile.html?uid=' + item.user_id">
+                    <div class="avatar flex items-center pt-3">
                         <div class="w-10 h-10 rounded-full">
-                            <img src="https://avatars.githubusercontent.com/u/133362311?v=4" />
+                            <img :src="'.' + item.profile_pic" />
                         </div>
-                        <label class="text-lg">
-            
+                        <label class="text-lg pl-2"> {{ item.fullname }}
                             <p class="text-gray-600">
                                 @{{ item.username }}
                             </p>
-            
                         </label>
                     </div>
-                </a> -->
-
-                <a :href="'profile.html?uid=' + item.user_id">
-                    <div class="avatar flex items-center pt-3">
-                      <div class="w-10 h-10 rounded-full">
-                        <img :src="'.' + item.profile_pic" />
-                      </div>
-                      <label class="text-lg pl-2"> {{ item.fullname }}
-                        <p class="text-gray-600">
-                          @{{ item.username }}
-                        </p>
-                      </label>
-                    </div>
-                  </a>
+                </a>
             </div>
         </div>
 
