--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
               <div v-if="notiff > 0" class="indicator-item badge badge-secondary">{{ notiff }}</div>
               <i class="material-icons">notifications</i>
             </div>
-            Notifications</a>
+            Notifications
+          </a>
         </li>
         <li>
           <a :href="'profile.html?uid='+uid" target="main-content"><i class="material-icons">account_circle</i>
@@ -68,18 +69,6 @@
                 <i class="material-icons w-4 h-4 opacity-70">search</i>
               </label> -->
         <div class="text-xl">Suggestions</div>
-        <!-- <div class="avatar pt-3">
-          <div class="w-10 h-10 rounded-full">
-            <img src="https://avatars.githubusercontent.com/u/133362311?v=4" />
-          </div>
-          <label class="text-lg">
-            <a href="profile.html?uid=30" target="main-content">Sengo Muramasa
-              <div class="text-gray-600">
-                @muramasa
-              </div>
-            </a>
-          </label>
-        </div> -->
         <div v-for="item in sugg" :key="item.id">
           <a :href="'profile.html?uid=' + item.user_id" target="main-content">
             <div class="avatar flex items-center pt-3">
@@ -130,31 +119,32 @@
           <div class="w-24 rounded-full">
             <img id="selectedImage" alt="Avatar Image" class="rounded-full">
           </div>
-          <div class="absolute inset-0 rounded-full opacity-0 bg-black bg-opacity-50 transition-opacity duration-300 group-hover:opacity-100">
+          <div
+            class="absolute inset-0 rounded-full opacity-0 bg-black bg-opacity-50 transition-opacity duration-300 group-hover:opacity-100">
             <i class="material-icons flex items-center justify-center h-24">edit</i>
             <input type="file" accept="image/*" id="imageInput" name="profile" onchange="displayImage()"
-            class="absolute top-0 left-0 w-full h-full opacity-0 cursor-pointer"/>
+              class="absolute top-0 left-0 w-full h-full opacity-0 cursor-pointer" />
           </div>
         </div>
 
         <input type="hidden" id="logid" name="userid">
         <label class="form-control">
-            <div class="label">
-                <span class="label-text">Fullname</span>
-            </div>
+          <div class="label">
+            <span class="label-text">Fullname</span>
+          </div>
 
-            <input id="logname" name="fullname" class="input input-bordered" />
+          <input id="logname" name="fullname" class="input input-bordered" />
         </label>
         <label class="form-control pb-6">
           <div class="label">
-              <span class="label-text">Username</span>
+            <span class="label-text">Username</span>
           </div>
 
           <input id="loguname" name="username" class="input input-bordered" />
-      </label>
+        </label>
 
         <button class="btn btn-primary float-end">Save</button>
-    </form>
+      </form>
     </div>
   </dialog>
 
